--- a/classwork/svg_demo.html
+++ b/classwork/svg_demo.html
@@ -10,4 +10,5 @@
       <rect x="100" y="100" width="300" height="75" fill="blue" />
     </svg>
   </body>
+  <script src="svg.js"></script>
 </html>
