--- a/classwork/bar/bar.html
+++ b/classwork/bar/bar.html
@@ -17,7 +17,7 @@
   <div style="width: 40px;">4</div>
   <div style="width: 80px;">8</div>
   <div style="width: 150px;">15</div>
-  <div style="width:">
+  <div style="width: 160px;">16</div>
   <div style="width: 230px;">23</div>
   <div style="width: 420px;">42</div>
 
