--- a/05/index.html
+++ b/05/index.html
@@ -1,27 +1,20 @@
 <DOCTYPE html>
-  
-<style>
-  .chart div {
-  font: 10px sans-serif;
-  background-color: steelblue;
-  text-align: right;
-  padding: 3px;
-  margin: 1px;
-  color: white;
-  }
-</style>
-
-<div class="chart">
-</div>
-
-<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script>
-data = [4, 8, 12, 13, 23];
-d3.select(".chart")
-.selectAll("div")
-.data(data)
-.enter().append("div")
-.style("width", function(d) {
-return d*10+"px";})
-.text(function(d) { return d; });
-</script>
+<html>
+  <head>
+    <title>Republican votes</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  </head>
+  <body>
+    <h1>Republican votes</h1>
+    <div class="allotted">
+      <div class="title">As of now...</div>
+    </div>
+    <br>
+    <div class="notAllotted">
+      <div class="title">In a moment...</div>
+    </div>
+  </body>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="index.js"> </script>
+</html>
