--- a/05/index.html
+++ b/05/index.html
@@ -3,16 +3,15 @@
   <head>
     <title>Republican votes</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Republican votes</h1>
     <div class="allotted">
-      <div class="title">As of now...</div>
+      <h2>Allotted States</h2>
     </div>
     <br>
     <div class="notAllotted">
-      <div class="title">In a moment...</div>
+      <h2>Non-Allotted States</h2>
     </div>
   </body>
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
